# esercitazioni-PCS-2026

./: prova4.txt  prova5.txt
esercitazione1/: CMakeLists.txt  misurazioni.txt  printargs.cpp  prog  temperature_medie.cpp
esercitazione1/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake
esercitazione2/: CMakeLists.txt  es2.cpp  esercizio1.cpp  prog
esercitazione2/build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake  es1  es2
esercitazione3/: CMakeLists.txt  header.hpp  main.cpp
esercitazione3/build_es3/: CMakeCache.txt  Makefile  cmake_install.cmake  programma
esercitazione4/: CMakeLists.txt  algoritmi_ordinamento.hpp  is_sorted.hpp  measure_sorts.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione4/build_es4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sorts  test_bubblesort  test_insertionsort  test_selectionsort
esercitazione5/: CMakeLists.txt  algoritmi_ordinamento.hpp  measure_sorts.cpp  osservazioni sui tempi.txt  test_mergesort.cpp  test_quicksort.cpp
esercitazione5/build_es5/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sorts  test_mergesort  test_quicksort
esercitazione5/build_es5/Testing/Temporary/: CTestCostData.txt
esercitazione5/build_es5_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sorts  test_mergesort  test_quicksort
esercitazione5/build_es5_debug/Testing/Temporary/: CTestCostData.txt
esercitazione6/: CmakeLists.txt  graphs.hpp  main.cpp
esercitazione6/build_es6/: CMakeCache.txt  (+3 more)
